# Embedded-Linux-Device-Simulator

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
docs/: audit_v0_3_0_components.md  audit_v0_3_0_components_by_target.md  elsim_binary_format.md  fakecpu_isa.md  gpio_mmio.md  mmio_contract.md
docs/audit/: as-is_template_v1.md  audit_v0_3_0_edges_includes.tsv  audit_v0_3_0_edges_literals.tsv  audit_v0_3_0_edges_targets.tsv  audit_v0_3_0_filelist.txt  audit_v0_3_0_index.md  audit_v0_3_0_manifest.sha256  audit_v0_3_0_snapshot.txt  audit_v0_3_0_v_canon.txt
docs/audit/Component/: as-is_component_a.md  as-is_component_b.md  as-is_component_c.md
docs/audit/tools/: audit_gen_components.py  audit_gen_components_by_target.py  audit_gen_edges_targets.py  audit_validate_components.py  audit_validate_components_by_target.py
examples/: basic_cpu_memory_test.cpp  basic_memory_test.cpp  build_gpio_blinky_program.cpp  build_hello_program.cpp  fakecpu_decode_smoke_test.cpp  fakecpu_exec_smoke_test.cpp  gpio_blinky.elsim-bin  hello.elsim-bin  program_loader_smoke_test.cpp  simulator_smoke_test.cpp  test_program.elsim-bin  timer_smoke_test.cpp  uart_smoke_test.cpp
examples/board-examples/: device-factory-test.yaml  empty-test.yaml  gpio-blinky-board.yaml  gpio-led-button-board.yaml  gpio-mmio-test.yaml  hello-board.yaml  invalid-duplicate-pin.yaml  invalid-led-without-gpio.yaml  invalid-pin-out-of-range.yaml  minimal-board.yaml
examples/uart-timer-demo/: board.yaml  main.cpp
include/elsim/: Version.hpp.in
include/elsim/core/: BoardConfigParser.hpp  BoardDescription.hpp  DeviceMemoryAdapter.hpp  FakeCpu.hpp  GpioController.hpp  ICpu.hpp  IMemoryBus.hpp  IMemoryMappedDevice.hpp  Logger.hpp  MemoryBus.hpp  MemoryBusAdapter.hpp  ProgramLoader.hpp  Simulator.hpp
include/elsim/device/: BaseDevice.hpp  DeviceFactory.hpp  DeviceManager.hpp  GpioDevice.hpp  IDevice.hpp  IDevicesTickable.hpp  TimerDevice.hpp  UartDevice.hpp  VirtualButtonDevice.hpp  VirtualLedDevice.hpp
src/cli/: CliApp.cpp  CliApp.hpp  main.cpp
src/cli/commands/: HelpCommand.cpp  HelpCommand.hpp  ListBoardsCommand.cpp  ListBoardsCommand.hpp  MonitorCommand.cpp  MonitorCommand.hpp  PressCommand.cpp  PressCommand.hpp  RunCommand.cpp  RunCommand.hpp
src/cli/monitor/: MonitorRenderers.cpp  MonitorRenderers.hpp  MonitorSnapshot.hpp
src/core/: BoardConfigParser.cpp  DeviceMemoryAdapter.cpp  FakeCpu.cpp  GpioController.cpp  Logger.cpp  MemoryBus.cpp  MemoryBusAdapter.cpp  ProgramLoader.cpp  Simulator.cpp
src/device/: DeviceFactory.cpp  GpioDevice.cpp  TimerDevice.cpp  UartDevice.cpp  VirtualButtonDevice.cpp  VirtualLedDevice.cpp
tests/: CMakeLists.txt  test_board_config_parser_gpio_led_button.cpp  test_fakecpu_core.cpp  test_gpio_cli_e2e_smoke.cpp  test_gpio_controller.cpp  test_gpio_led_integration.cpp  test_gpio_mmio.cpp  test_memory_bus.cpp  test_virtual_button_device.cpp  test_virtual_led_device.cpp
